--- a/package.json
+++ b/package.json
@@ -42,6 +42,5 @@
   "bugs": {
     "url": "https://github.com/dbrockman/promise-map-limit/issues"
   },
-  "homepage": "https://github.com/dbrockman/promise-map-limit#readme",
-  "version": "1.0.0"
+  "homepage": "https://github.com/dbrockman/promise-map-limit#readme"
 }
